--- a/package.json
+++ b/package.json
@@ -28,11 +28,13 @@
     "@llamaindex/cloud": "^2.0.20",
     "@t3-oss/env-nextjs": "^0.10.1",
     "@tanstack/react-query": "^5.50.0",
+    "@trigger.dev/sdk": "^3.3.7",
     "@trpc/client": "^11.0.0-rc.446",
     "@trpc/react-query": "^11.0.0-rc.446",
     "@trpc/server": "^11.0.0-rc.446",
     "@types/multer": "^1.4.12",
     "@uploadthing/react": "^7.1.3",
+    "dotenv": "^16.4.7",
     "drizzle-orm": "^0.38.2",
     "elevenlabs": "^1.50.2",
     "geist": "^1.3.0",
@@ -47,6 +49,7 @@
     "zod": "^3.23.3"
   },
   "devDependencies": {
+    "@trigger.dev/build": "^3.3.7",
     "@types/eslint": "^8.56.10",
     "@types/node": "^20.14.10",
     "@types/pdfjs-dist": "^2.10.377",
