--- a/package.json
+++ b/package.json
@@ -71,5 +71,8 @@
   "ct3aMetadata": {
     "initVersion": "7.38.1"
   },
-  "packageManager": "npm@10.8.2"
+  "packageManager": "npm@10.8.2",
+  "optionalDependencies": {
+    "@libsql/linux-x64-gnu": "^0.5.0-pre.5"
+  }
 }
